--- a/package.json
+++ b/package.json
@@ -3,27 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/lab": "^5.0.0-alpha.157",
+    "@mui/material": "^5.15.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.8",
-    "@types/react": "^18.2.31",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.14",
+    "async-mutex": "^0.4.0",
     "axios": "^1.6.0",
+    "delete-react-zombies": "^2.0.1",
     "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
+    "react-cookie": "^7.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.4",
     "typescript": "^4.9.5",
     "use-debounce": "^10.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^1.11.17"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,5 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/testing-library__user-event": "^4.2.0"
   }
 }
